[package]
name = "polka-scope-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cliente HTTP para RPC
reqwest = { version = "0.12.24", features = ["json"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialização JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Medição de tempo/latência
instant = "0.1"

# Para parsing de argumentos CLI
clap = { version = "4.4", features = ["derive"] }

# Para conexões TCP (sondagem)
socket2 = "0.5"